# Openspective

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: __init__.py  config.py  main.py  models.py  security.py
app/routers/: __init__.py  analyze.py  chart.py  meta.py  validation.py
app/services/: __init__.py  cache.py  chart.py  chunking.py  classifier.py  detector.py  metrics.py  normalizer.py  ratelimit.py  redis_client.py  scoring.py  spans.py
app/tests/: conftest.py  test_analyze.py  test_auth.py  test_chart.py  test_chunking.py  test_classifier.py  test_detector.py  test_devmode.py  test_metrics.py  test_normalizer.py  test_ratelimit.py  test_spans.py
scripts/: dev.sh  experiment_chunking.py
